--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bol re </title>
+    <title>Hii Dude </title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
@@ -12,7 +12,7 @@
     <section class="chat__section">
         <div class="brand">
             <img height="40" src="/monkey.png" alt="">
-            <h1>bol re</h1>
+            <h1>Hii Dude</h1>
         </div>
         <div class="message__area"></div>
         <div>
